--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -20,7 +20,7 @@
   "app.components.ContributeMenu.howItWorks": "",
   "app.components.ContributeType.callToAction": "",
   "app.components.ContributeType.header": "",
-  "app.components.Footer.footer": "",
+  "app.components.Footer.footer": "Beautiful Rising بواسطة Beautiful Rising، و مختلف المؤلفين مرخصٌ لها بموجب Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. قد تكون أي تصاريح خارج نطاق هذا الترخيص متاحةً على beautifulrising.org. إن الوثائق حول واجهة برمجة التطبيقات (API) و التي تدعّم Beautiful Rising يمكن أن [تجدها على GitHub](https://github.com/BeautifulTrouble/api-docs#api-docs).",
   "app.components.Header.aboutLink": "",
   "app.components.Header.header": "",
   "app.components.Header.homeLink": "",
@@ -39,7 +39,7 @@
   "app.components.Menu.teamMenu": "",
   "app.components.Menu.toolBoxMenu": "",
   "app.components.Menu.valuesMenu": "",
-  "app.components.ModalMenu.header": "",
+  "app.components.ModalMenu.header": "قائمة",
   "app.components.NotFoundPage.header": "",
   "app.components.OnboardingContent.advisoryNetwork": "",
   "app.components.OnboardingContent.btaa": "",
@@ -67,103 +67,105 @@
   "app.components.PlatformsPageComponents.what": "",
   "app.components.RegionOptions.header": "",
   "app.components.SelectedToolComponents.header": "",
-  "app.components.ToolHowToUse.header": "",
+  "app.components.ToolHowToUse.header": "لماذا نجح",
   "app.components.ToolKeyItems.header": "",
-  "app.components.ToolKeyItems.keyMethodology": "",
-  "app.components.ToolKeyItems.keyPrinciple": "",
-  "app.components.ToolKeyItems.keyTactic": "",
-  "app.components.ToolKeyItems.keyTheory": "",
+  "app.components.ToolKeyItems.keyMethodology": "المنهجية الأساسية",
+  "app.components.ToolKeyItems.keyPrinciple": "المبدأ الأساسي",
+  "app.components.ToolKeyItems.keyTactic": "التكتيكات الأساسية",
+  "app.components.ToolKeyItems.keyTheory": "النظرية الأساسية",
   "app.components.ToolSnapshotArea.callOut": "",
   "app.components.ToolSnapshotArea.header": "",
   "app.components.ToolSnapshotArea.seeMore": "",
-  "app.components.ToolSnapshotArea.viewForm": "",
+  "app.components.ToolSnapshotArea.viewForm": "اذهب إلى النموذج",
   "app.components.ToolTypeAllFull.header": "",
   "app.components.ToolTypeAllPartial.header": "",
   "app.components.ToolTypeArea.allHead": "",
   "app.components.ToolTypeArea.header": "",
-  "app.components.ToolTypeArea.methodologiesDesc": "",
-  "app.components.ToolTypeArea.methodologiesHead": "",
-  "app.components.ToolTypeArea.methodologiesLong": "",
-  "app.components.ToolTypeArea.principlesDesc": "",
-  "app.components.ToolTypeArea.principlesHead": "",
-  "app.components.ToolTypeArea.principlesLong": "",
-  "app.components.ToolTypeArea.storiesDesc": "",
-  "app.components.ToolTypeArea.storiesHead": "",
-  "app.components.ToolTypeArea.storiesLong": "",
-  "app.components.ToolTypeArea.tacticsDesc": "",
-  "app.components.ToolTypeArea.tacticsHead": "",
-  "app.components.ToolTypeArea.tacticsLong": "",
-  "app.components.ToolTypeArea.theoriesDesc": "",
-  "app.components.ToolTypeArea.theoriesHead": "",
-  "app.components.ToolTypeArea.theoriesLong": "",
+  "app.components.ToolTypeArea.methodologiesDesc": "هي الإطارات الاستراتيجية و التدريبات العملية التي تساعدك في تقييم موقفك و التخطيط لحملتك.",
+  "app.components.ToolTypeArea.methodologiesHead": "منهجيات",
+  "app.components.ToolTypeArea.methodologiesLong": "\"إذا لم تكن تعرف إلى أين أنت ذاهب، فسينتهي بك المطاف في مكان آخر.\" –يوجي بيرا التكتيكات ممتعة، و لكن إذا لم تكن قد حددت مسبقاً الأهداف و رسمت خريطة استراتيجيتك حول كيفية تحقيقها، فإنه حتى أقوى التكتيكات لن تقربك من حيث تريد أن تذهب. هنا حيث تأتي هذه التدريبات و الإطارات الاستراتيجية: إنها أدوات تساعدك على فهم موقفك بشكل أفضل، و التخطيط لخطواتك القادمة، و تقييم تقدمك، و في النهاية، الفوز.",
+  "app.components.ToolTypeArea.principlesDesc": "هو توجيه تم اختباره عبر الوقت لكيفية تصميم أعمال و حملات ناجحة.",
+  "app.components.ToolTypeArea.principlesHead": "مبادئ",
+  "app.components.ToolTypeArea.principlesLong": "بعد عقود من النصر و الهزيمة في المعارك، يميل النشطاء المبدعون المخضرمون للحصول على مجموعة من الاختصارات العقلية حول كيفية تصميم أعمال و حملات ناجحة. إن هذه الأفكار المكتسبة بشق الأنفس ليست قواعد صارمة، و لكنها توجيهات حرّة تأخذها بعين الاعتبار في حال تصميمك لأعمالك الخاصة.",
+  "app.components.ToolTypeArea.storiesDesc": "روايات من الأعمال و الحملات التي لا تنسى، محلّلة ما قد نجح، أو لم ينجح، و لماذا.",
+  "app.components.ToolTypeArea.storiesHead": "قصص",
+  "app.components.ToolTypeArea.storiesLong": "ممارسة ثورية بدون شبكات أمان. مختبرنا هو العالم من حولنا – الشوارع، و الإنترنت، و موجات الأثير، و قلوبنا. إننا نجرّب، و نفشل، و نعدّل، و نحاول مرّة أخرى، قد تكون هذه المرة أقل كارثية بقليل، أكثر جمالاً بقليل – حتى في نهاية المطاف، نفوز. دائماً نتعلم. في هذه القصص فإننا نتشارك ما تعلمناه.",
+
+  "app.components.ToolTypeArea.tacticsDesc": "هي أشكال معينة للعمل الإبداعي، مثل فلاش موب أو حصار.",
+  "app.components.ToolTypeArea.tacticsHead": "تكتيكات",
+  "app.components.ToolTypeArea.tacticsLong": "كل فرع من الفروع له أشكال الأعمال الخاصة به: راقصات الباليه تقوم بحركات الاندفاع و الدوران؛ الملاكمون يضربون بالكوع و يلكمون. و بالمثل، فإن النشطاء المبدعون لديهم أشكالهم الخاصة لأعمالهم. لقد تم استخدام بعضها، مثل اعتصام، أو مسيرة أو خط اعتصام، لعدة أجيال. و البعض الآخر ابتكارات حديثة، مثل فلاش موب أو هاشتاج الحملات. و كما هو الحال مع الباليه و الملاكمة، فإن تكتيكاً واحداً، بغض النظر عن مدى تنفيذه بشكل جيد، نادراً ما يجلب الفوز لليوم. يأتي الفوز، إذا أتى، من خلال الجمع بين الإبداع و التنوّع.",
+  "app.components.ToolTypeArea.theoriesDesc": "هي أفكار شاملة تساعدنا على فهم آلية عمل العالم و كيف قد نغيّرها.",
+  "app.components.ToolTypeArea.theoriesHead": "نظريات",
+  "app.components.ToolTypeArea.theoriesLong": "لا يوجد شيء عملي للغاية أكثر من نظرية جيدة.\" –جورج لاكي هل تمنيت في أي وقت مضى أن يأخذ شخص ما الأفكار الأكثر أهمية من المفكرين الثوريين مثل باولو فيريري، و أرونداتي روي، و أنطونيو غرامشي، و و يطهوها معاً إلى كتل نظرية قويّة، و يمكن الوصول إليها، وفقاً للاحتياجات الواقعية لمتاعب الحياة اليومية؟ لا مزيد من البحث",
   "app.components.ToolTypeSelectedFull.header": "",
   "app.components.ToolTypeSelectedPartial.header": "",
   "app.components.ToolsComponents.header": "",
-  "app.components.ToolsPotentialRisk.potentialRiskHeader": "",
-  "app.components.ToolsRequestTraining.requestTraining": "",
+  "app.components.ToolsPotentialRisk.potentialRiskHeader": "المخاطر المحتملة",
+  "app.components.ToolsRequestTraining.requestTraining": "يمكنك أيضاً طلب تدريب Beautiful Rising",
+  "app.components.ToolWhyItFailed.header": "لماذا فشل",
   "app.components.TrainingMenu.header": "",
   "app.components.TrainingMenu.otherResources": "",
   "app.components.TrainingMenu.requestTraining": "",
   "app.components.TypeFlagTooltip.header": "",
   "app.components.TypeMenu.header": "",
-  "app.components.TypeMenu.stories": "",
+  "app.components.TypeMenu.stories": "قصص",
   "app.containers.AboutPage.description": "",
   "app.containers.AboutPage.header": "",
   "app.containers.ContactUs.complete": "",
-  "app.containers.ContactUs.header": "",
-  "app.containers.ContactUs.submit": "",
-  "app.containers.ContactUs.subscribe": "",
+  "app.containers.ContactUs.header": "اتصل بنا",
+  "app.containers.ContactUs.submit": "رفع",
+  "app.containers.ContactUs.subscribe": "اشترك في نشرتنا الإخبارية",
   "app.containers.ContributePage.examples": "",
   "app.containers.ContributePage.header": "",
   "app.containers.ContributePage.typeOfContent": "",
   "app.containers.EmailTools.complete": "",
   "app.containers.EmailTools.header": "",
   "app.containers.EmailTools.instruction": "",
-  "app.containers.EmailTools.submit": "",
-  "app.containers.HomePage.clearSearch": "",
+  "app.containers.EmailTools.submit": "رفع",
+  "app.containers.HomePage.clearSearch": "مسح",
   "app.containers.HomePage.header": "",
-  "app.containers.HomePage.methodology": "",
-  "app.containers.HomePage.principle": "",
+  "app.containers.HomePage.methodology": "منهجية",
+  "app.containers.HomePage.principle": "مبدأ",
   "app.containers.HomePage.searchResults": "",
-  "app.containers.HomePage.sortBy": "",
-  "app.containers.HomePage.story": "",
-  "app.containers.HomePage.tactic": "",
-  "app.containers.HomePage.tags": "",
-  "app.containers.HomePage.theory": "",
-  "app.containers.HomePage.viewAs": "",
+  "app.containers.HomePage.sortBy": "ترتيب حسب",
+  "app.containers.HomePage.story": "قصة",
+  "app.containers.HomePage.tactic": "تكتيك",
+  "app.containers.HomePage.tags": "شعارات",
+  "app.containers.HomePage.theory": "نظرية",
+  "app.containers.HomePage.viewAs": "عرض كـ",
   "app.containers.PlatformsPage.header": "",
   "app.containers.SearchField.header": "",
-  "app.containers.SearchField.placeholder": "",
+  "app.containers.SearchField.placeholder": "البحث عن الكلمات الرئيسية، مثلا: التشريع، قمع الدولة، إلخ.",
   "app.containers.SubmitRealWorldExample.description": "",
-  "app.containers.SubmitRealWorldExample.header": "",
+  "app.containers.SubmitRealWorldExample.header": "هل رأيت أو استخدمت هذا",
   "app.containers.SubmitRealWorldExample.instruction": "",
-  "app.containers.SubmitRealWorldExample.submit": "",
+  "app.containers.SubmitRealWorldExample.submit": "رفع",
   "app.containers.SubmitRealWorldExample.title": "",
   "app.containers.SubmitRealWorldExample.url": "",
-  "app.containers.Tags.header": "",
-  "app.containers.ToolPage.addTool": "",
-  "app.containers.ToolPage.contributedByHeader": "",
+  "app.containers.Tags.header": "شعارات",
+  "app.containers.ToolPage.addTool": "حفظ هذه الوحدة",
+  "app.containers.ToolPage.contributedByHeader": "تمت المساهمة من قبل",
   "app.containers.ToolPage.header": "",
   "app.containers.ToolPage.learnMore": "",
-  "app.containers.ToolPage.methodologies": "",
-  "app.containers.ToolPage.principles": "",
-  "app.containers.ToolPage.realWorldExamplesOf": "",
-  "app.containers.ToolPage.relatedTools": "",
-  "app.containers.ToolPage.removeTool": "",
-  "app.containers.ToolPage.showLess": "",
-  "app.containers.ToolPage.showMore": "",
-  "app.containers.ToolPage.stories": "",
-  "app.containers.ToolPage.tactics": "",
-  "app.containers.ToolPage.tags": "",
-  "app.containers.ToolPage.theories": "",
+  "app.containers.ToolPage.methodologies": "منهجيات",
+  "app.containers.ToolPage.principles": "مبادئ",
+  "app.containers.ToolPage.realWorldExamplesOf": "أمثلة العالم الحقيقي من {title}",
+  "app.containers.ToolPage.relatedTools": "الوحدات المرتبطة",
+  "app.containers.ToolPage.removeTool": "حذف هذه الوحدة من أدواتك",
+  "app.containers.ToolPage.showLess": "اقرأ أقل",
+  "app.containers.ToolPage.showMore": "اقرأ المزيد",
+  "app.containers.ToolPage.stories": "قصص",
+  "app.containers.ToolPage.tactics": "تكتيكات",
+  "app.containers.ToolPage.tags": "شعارات",
+  "app.containers.ToolPage.theories": "نظريات",
   "app.containers.Tools.header": "",
-  "app.containers.Tools.myTools": "",
-  "app.containers.Tools.newsFeed": "",
-  "app.containers.Tools.remove": "",
-  "app.containers.Tools.share": "",
-  "app.containers.ToolsSortOptions.alphabeticalButton": "",
+  "app.containers.Tools.myTools": "أدواتي",
+  "app.containers.Tools.newsFeed": "التغذية الإخبارية",
+  "app.containers.Tools.remove": "حذف",
+  "app.containers.Tools.share": "مشاركة هذه الوحدة",
+  "app.containers.ToolsSortOptions.alphabeticalButton": "أبجدي",
   "app.containers.ToolsSortOptions.header": "",
-  "app.containers.ToolsSortOptions.newestButton": "",
+  "app.containers.ToolsSortOptions.newestButton": "الأحدث",
   "app.containers.ToolsViewOptions.header": "",
   "app.containers.TrainingPage.header": "",
   "app.containers.TrainingPage.otherResources": ""
