Fix font and language issue for AR and ES

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -67,6 +67,7 @@
   "app.components.PlatformsPageComponents.what": "",
   "app.components.RegionOptions.header": "",
   "app.components.SelectedToolComponents.header": "",
+  "app.components.ShareButton.header": "",
   "app.components.ToolHowToUse.header": "لماذا نجح",
   "app.components.ToolKeyItems.header": "",
   "app.components.ToolKeyItems.keyMethodology": "المنهجية الأساسية",
@@ -90,7 +91,6 @@
   "app.components.ToolTypeArea.storiesDesc": "روايات من الأعمال و الحملات التي لا تنسى، محلّلة ما قد نجح، أو لم ينجح، و لماذا.",
   "app.components.ToolTypeArea.storiesHead": "قصص",
   "app.components.ToolTypeArea.storiesLong": "ممارسة ثورية بدون شبكات أمان. مختبرنا هو العالم من حولنا – الشوارع، و الإنترنت، و موجات الأثير، و قلوبنا. إننا نجرّب، و نفشل، و نعدّل، و نحاول مرّة أخرى، قد تكون هذه المرة أقل كارثية بقليل، أكثر جمالاً بقليل – حتى في نهاية المطاف، نفوز. دائماً نتعلم. في هذه القصص فإننا نتشارك ما تعلمناه.",
-
   "app.components.ToolTypeArea.tacticsDesc": "هي أشكال معينة للعمل الإبداعي، مثل فلاش موب أو حصار.",
   "app.components.ToolTypeArea.tacticsHead": "تكتيكات",
   "app.components.ToolTypeArea.tacticsLong": "كل فرع من الفروع له أشكال الأعمال الخاصة به: راقصات الباليه تقوم بحركات الاندفاع و الدوران؛ الملاكمون يضربون بالكوع و يلكمون. و بالمثل، فإن النشطاء المبدعون لديهم أشكالهم الخاصة لأعمالهم. لقد تم استخدام بعضها، مثل اعتصام، أو مسيرة أو خط اعتصام، لعدة أجيال. و البعض الآخر ابتكارات حديثة، مثل فلاش موب أو هاشتاج الحملات. و كما هو الحال مع الباليه و الملاكمة، فإن تكتيكاً واحداً، بغض النظر عن مدى تنفيذه بشكل جيد، نادراً ما يجلب الفوز لليوم. يأتي الفوز، إذا أتى، من خلال الجمع بين الإبداع و التنوّع.",
@@ -99,10 +99,10 @@
   "app.components.ToolTypeArea.theoriesLong": "لا يوجد شيء عملي للغاية أكثر من نظرية جيدة.\" –جورج لاكي هل تمنيت في أي وقت مضى أن يأخذ شخص ما الأفكار الأكثر أهمية من المفكرين الثوريين مثل باولو فيريري، و أرونداتي روي، و أنطونيو غرامشي، و و يطهوها معاً إلى كتل نظرية قويّة، و يمكن الوصول إليها، وفقاً للاحتياجات الواقعية لمتاعب الحياة اليومية؟ لا مزيد من البحث",
   "app.components.ToolTypeSelectedFull.header": "",
   "app.components.ToolTypeSelectedPartial.header": "",
+  "app.components.ToolWhyItFailed.header": "لماذا فشل",
   "app.components.ToolsComponents.header": "",
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "المخاطر المحتملة",
   "app.components.ToolsRequestTraining.requestTraining": "يمكنك أيضاً طلب تدريب Beautiful Rising",
-  "app.components.ToolWhyItFailed.header": "لماذا فشل",
   "app.components.TrainingMenu.header": "",
   "app.components.TrainingMenu.otherResources": "",
   "app.components.TrainingMenu.requestTraining": "",
@@ -111,6 +111,11 @@
   "app.components.TypeMenu.stories": "قصص",
   "app.containers.AboutPage.description": "",
   "app.containers.AboutPage.header": "",
+  "app.containers.AskTheContributor.emailPlaceholder": "",
+  "app.containers.AskTheContributor.header": "",
+  "app.containers.AskTheContributor.questionPlaceholder": "",
+  "app.containers.AskTheContributor.subheader": "",
+  "app.containers.AskTheContributor.submit": "",
   "app.containers.ContactUs.complete": "",
   "app.containers.ContactUs.header": "اتصل بنا",
   "app.containers.ContactUs.submit": "رفع",
@@ -122,6 +127,8 @@
   "app.containers.EmailTools.header": "",
   "app.containers.EmailTools.instruction": "",
   "app.containers.EmailTools.submit": "رفع",
+  "app.containers.EmptyToolsMessage.header": "",
+  "app.containers.EmptyToolsMessage.instruction": "",
   "app.containers.HomePage.clearSearch": "مسح",
   "app.containers.HomePage.header": "",
   "app.containers.HomePage.methodology": "منهجية",
@@ -133,9 +140,13 @@
   "app.containers.HomePage.tags": "شعارات",
   "app.containers.HomePage.theory": "نظرية",
   "app.containers.HomePage.viewAs": "عرض كـ",
+  "app.containers.NewsFeed.follow": "",
+  "app.containers.NewsFeed.header": "",
   "app.containers.PlatformsPage.header": "",
   "app.containers.SearchField.header": "",
   "app.containers.SearchField.placeholder": "البحث عن الكلمات الرئيسية، مثلا: التشريع، قمع الدولة، إلخ.",
+  "app.containers.SubmitNewsFeed.header": "",
+  "app.containers.SubmitNewsFeed.submit": "",
   "app.containers.SubmitRealWorldExample.description": "",
   "app.containers.SubmitRealWorldExample.header": "هل رأيت أو استخدمت هذا",
   "app.containers.SubmitRealWorldExample.instruction": "",
@@ -148,19 +159,26 @@
   "app.containers.ToolPage.header": "",
   "app.containers.ToolPage.learnMore": "",
   "app.containers.ToolPage.methodologies": "منهجيات",
+  "app.containers.ToolPage.methodology": "منهجية",
+  "app.containers.ToolPage.principle": "مبدأ",
   "app.containers.ToolPage.principles": "مبادئ",
   "app.containers.ToolPage.realWorldExamplesOf": "أمثلة العالم الحقيقي من {title}",
   "app.containers.ToolPage.relatedTools": "الوحدات المرتبطة",
   "app.containers.ToolPage.removeTool": "حذف هذه الوحدة من أدواتك",
+  "app.containers.ToolPage.share": "",
   "app.containers.ToolPage.showLess": "اقرأ أقل",
   "app.containers.ToolPage.showMore": "اقرأ المزيد",
   "app.containers.ToolPage.stories": "قصص",
+  "app.containers.ToolPage.story": "قصة",
+  "app.containers.ToolPage.tactic": "تكتيك",
   "app.containers.ToolPage.tactics": "تكتيكات",
   "app.containers.ToolPage.tags": "شعارات",
   "app.containers.ToolPage.theories": "نظريات",
+  "app.containers.ToolPage.theory": "نظرية",
   "app.containers.Tools.header": "",
   "app.containers.Tools.myTools": "أدواتي",
   "app.containers.Tools.newsFeed": "التغذية الإخبارية",
+  "app.containers.Tools.pdfSpiel": "",
   "app.containers.Tools.remove": "حذف",
   "app.containers.Tools.share": "مشاركة هذه الوحدة",
   "app.containers.ToolsSortOptions.alphabeticalButton": "أبجدي",
