--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -5,7 +5,7 @@
   "app.components.AboutPageComponents.faqHeader": "FAQ",
   "app.components.AboutPageComponents.header": "This is the AboutPageComponents component !",
   "app.components.AboutPageComponents.inspiration": "# INSPIRATION\nThis toolbox was inspired by the [Beautiful Trouble book and website](http://beautifultrouble.org/). The scope has been expanded to involve a more diverse group of activists as both makers and users of the toolkit.",
-  "app.components.AboutPageComponents.ipsum": "",
+  "app.components.AboutPageComponents.ipsum": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariaturSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima",
   "app.components.AboutPageComponents.ourAdvisoryNetworkHeader": "WHO’S IN OUR ADVISORY NETWORK?",
   "app.components.AboutPageComponents.ourProcessHeader": "HOW DID WE MAKE THE TOOLBOX?",
   "app.components.AboutPageComponents.ourTeamHeader": "WHO’S ON OUR TEAM?",
@@ -67,6 +67,7 @@
   "app.components.PlatformsPageComponents.what": "What It is",
   "app.components.RegionOptions.header": "Region",
   "app.components.SelectedToolComponents.header": "This is the SelectedToolComponents component !",
+  "app.components.ShareButton.header": "Share",
   "app.components.ToolHowToUse.header": "Why it Worked",
   "app.components.ToolKeyItems.header": "This is the ToolKeyItems component !",
   "app.components.ToolKeyItems.keyMethodology": "Key Methodology",
@@ -98,6 +99,7 @@
   "app.components.ToolTypeArea.theoriesLong": "“There’s nothing so practical as a good theory.” —George Lakey Ever wished someone would take the most important ideas from revolutionary thinkers like Paulo Freire, Arundhati Roy, and Antonio Gramsci, and cook them down into fierce, accessible nuggets of theory, tailored to the pragmatic needs of the everyday troublemaker? Look no further.",
   "app.components.ToolTypeSelectedFull.header": "This is the ToolTypeSelectedFull component !",
   "app.components.ToolTypeSelectedPartial.header": "This is the ToolTypeSelectedPartial component !",
+  "app.components.ToolWhyItFailed.header": "Why it Failed",
   "app.components.ToolsComponents.header": "This is the ToolsComponents component !",
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "Potential Risks",
   "app.components.ToolsRequestTraining.requestTraining": "You can also <a href=\"https://docs.google.com/forms/d/e/1FAIpQLSfbN0Qb5P2ORCHYl4UPEdA-01I-ixPP9TRjEFv5c05HGguwrA/viewform\" target=\"_blank\">request</a> a Beautiful Rising training",
@@ -109,6 +111,11 @@
   "app.components.TypeMenu.stories": "Stories",
   "app.containers.AboutPage.description": "Beautiful Rising harnesses the insights of changemakers worldwide to help make our movements more strategic, creative and effective.",
   "app.containers.AboutPage.header": "ABOUT",
+  "app.containers.AskTheContributor.emailPlaceholder": "Enter your email for the contributor to get back to you",
+  "app.containers.AskTheContributor.header": "QUESTIONS FOR THE CONTRIBUTOR?",
+  "app.containers.AskTheContributor.questionPlaceholder": "Type your question here",
+  "app.containers.AskTheContributor.subheader": "Ask {author} here...",
+  "app.containers.AskTheContributor.submit": "submit",
   "app.containers.ContactUs.complete": "Complete",
   "app.containers.ContactUs.header": "Contact Us",
   "app.containers.ContactUs.submit": "Submit",
@@ -120,6 +127,8 @@
   "app.containers.EmailTools.header": "Email Modules",
   "app.containers.EmailTools.instruction": "Type your email below and send these modules to your inbox",
   "app.containers.EmailTools.submit": "submit",
+  "app.containers.EmptyToolsMessage.header": "You can save your go-to tools here, so that the next time you access the toolbox you don’t need to go searching for them all over again.",
+  "app.containers.EmptyToolsMessage.instruction": "Click on the {icon} to save your favourite tools here. (No need to log in; your list will be here the next time you visit from the same device.)",
   "app.containers.HomePage.clearSearch": "Clear",
   "app.containers.HomePage.header": "This is Home",
   "app.containers.HomePage.methodology": "methodology",
@@ -131,9 +140,13 @@
   "app.containers.HomePage.tags": "Tags",
   "app.containers.HomePage.theory": "theory",
   "app.containers.HomePage.viewAs": "View As",
+  "app.containers.NewsFeed.follow": "Follow",
+  "app.containers.NewsFeed.header": "We pull various newsworthy hashtags associated with different campaigns and movements to keep you in the loop with what’s happening in the world of activism!",
   "app.containers.PlatformsPage.header": "Platforms",
   "app.containers.SearchField.header": "This is SearchField container !",
   "app.containers.SearchField.placeholder": "Search for keywords, ex: legislation, state repression, etc.",
+  "app.containers.SubmitNewsFeed.header": "IS THERE A HASHTAG THAT WE SHOULD BE AWARE OF? LET US KNOW...",
+  "app.containers.SubmitNewsFeed.submit": "Submit",
   "app.containers.SubmitRealWorldExample.description": "A brief description (150 characters)",
   "app.containers.SubmitRealWorldExample.header": "Have you seen or used this {type}?",
   "app.containers.SubmitRealWorldExample.instruction": "Great! Share that experience with us in the form of a link and if it’s a solid example we’ll feature it in the section above",
@@ -146,19 +159,26 @@
   "app.containers.ToolPage.header": "This is ToolPage container !",
   "app.containers.ToolPage.learnMore": "Learn More",
   "app.containers.ToolPage.methodologies": "Methodologies",
+  "app.containers.ToolPage.methodology": "Methodologies",
+  "app.containers.ToolPage.principle": "Principles",
   "app.containers.ToolPage.principles": "Principles",
   "app.containers.ToolPage.realWorldExamplesOf": "Real World Examples of \"{title}\"",
   "app.containers.ToolPage.relatedTools": "Related Tools",
   "app.containers.ToolPage.removeTool": "Remove this from your saved tools",
+  "app.containers.ToolPage.share": "Share this tool",
   "app.containers.ToolPage.showLess": "Read Less",
   "app.containers.ToolPage.showMore": "Read More",
   "app.containers.ToolPage.stories": "Stories",
+  "app.containers.ToolPage.story": "Stories",
+  "app.containers.ToolPage.tactic": "Tactics",
   "app.containers.ToolPage.tactics": "Tactics",
   "app.containers.ToolPage.tags": "Tags",
   "app.containers.ToolPage.theories": "Theories",
+  "app.containers.ToolPage.theory": "Theories",
   "app.containers.Tools.header": "This is Tools container !",
   "app.containers.Tools.myTools": "My Tools",
   "app.containers.Tools.newsFeed": "News Feed",
+  "app.containers.Tools.pdfSpiel": "Click the button below to download a PDF version of your chosen tools",
   "app.containers.Tools.remove": "Remove",
   "app.containers.Tools.share": "share",
   "app.containers.ToolsSortOptions.alphabeticalButton": "Alphabetical",
