--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -67,6 +67,7 @@
   "app.components.PlatformsPageComponents.what": "DE QUÉ TRATA",
   "app.components.RegionOptions.header": "",
   "app.components.SelectedToolComponents.header": "This is the SelectedToolComponents component !",
+  "app.components.ShareButton.header": "",
   "app.components.ToolHowToUse.header": "Why it Worked",
   "app.components.ToolKeyItems.header": "This is the ToolKeyItems component !",
   "app.components.ToolKeyItems.keyMethodology": "Key Methodology",
@@ -98,6 +99,7 @@
   "app.components.ToolTypeArea.theoriesLong": "“No hay nada tan práctico como una buena teoría” (George Lakey) ¿Alguna vez has deseado que alguien tomara las ideas más importantes de pensadores revolucionarios como Paulo Freire, Arundhati Roy y Antonio Gramsci y las organizara en píldoras teóricas efectivas y accesibles, ajustadas a las necesidades pragmáticas de los alborotadores comunes y corrientes? No busques más.",
   "app.components.ToolTypeSelectedFull.header": "This is the ToolTypeSelectedFull component !",
   "app.components.ToolTypeSelectedPartial.header": "This is the ToolTypeSelectedPartial component !",
+  "app.components.ToolWhyItFailed.header": "",
   "app.components.ToolsComponents.header": "This is the ToolsComponents component !",
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "Potential Risks",
   "app.components.ToolsRequestTraining.requestTraining": "You can also <a href=\"https://docs.google.com/forms/d/e/1FAIpQLSfbN0Qb5P2ORCHYl4UPEdA-01I-ixPP9TRjEFv5c05HGguwrA/viewform\" target=\"_blank\">request</a> a Beautiful Rising training",
@@ -109,6 +111,11 @@
   "app.components.TypeMenu.stories": "Historias",
   "app.containers.AboutPage.description": "Beautiful Rising harnesses the insights of changemakers worldwide to help make our movements more strategic, creative and effective.",
   "app.containers.AboutPage.header": "ACERCA DEL PROYECTO",
+  "app.containers.AskTheContributor.emailPlaceholder": "",
+  "app.containers.AskTheContributor.header": "",
+  "app.containers.AskTheContributor.questionPlaceholder": "",
+  "app.containers.AskTheContributor.subheader": "",
+  "app.containers.AskTheContributor.submit": "",
   "app.containers.ContactUs.complete": "",
   "app.containers.ContactUs.header": "CONTÁCTANOS",
   "app.containers.ContactUs.submit": "ENVIAR",
@@ -120,6 +127,8 @@
   "app.containers.EmailTools.header": "",
   "app.containers.EmailTools.instruction": "",
   "app.containers.EmailTools.submit": "",
+  "app.containers.EmptyToolsMessage.header": "",
+  "app.containers.EmptyToolsMessage.instruction": "",
   "app.containers.HomePage.clearSearch": "",
   "app.containers.HomePage.header": "This is Home",
   "app.containers.HomePage.methodology": "METODOLOGÍA",
@@ -131,9 +140,13 @@
   "app.containers.HomePage.tags": "Etiquetas",
   "app.containers.HomePage.theory": "TEORÍA",
   "app.containers.HomePage.viewAs": "Ver como",
+  "app.containers.NewsFeed.follow": "",
+  "app.containers.NewsFeed.header": "",
   "app.containers.PlatformsPage.header": "PLATAFORMAS",
   "app.containers.SearchField.header": "This is SearchField container !",
   "app.containers.SearchField.placeholder": "Buscar palabras clave, como por ejemplo: legislación, represión estatal, etc.",
+  "app.containers.SubmitNewsFeed.header": "",
+  "app.containers.SubmitNewsFeed.submit": "",
   "app.containers.SubmitRealWorldExample.description": "Una breve descripción (150 caracteres)",
   "app.containers.SubmitRealWorldExample.header": "¿HAS VISTO O UTILIZADO ESTO PRINCIPLE?",
   "app.containers.SubmitRealWorldExample.instruction": "¡Genial! Comparte esa experiencia con nosotros en forma de enlace y si es un ejemplo sólido lo mostraremos destacado en la sección anterior",
@@ -146,19 +159,26 @@
   "app.containers.ToolPage.header": "This is ToolPage container !",
   "app.containers.ToolPage.learnMore": "APRENDER MÁS",
   "app.containers.ToolPage.methodologies": "METODOLOGÍAS",
+  "app.containers.ToolPage.methodology": "METODOLOGÍA",
+  "app.containers.ToolPage.principle": "PRINCIPIO",
   "app.containers.ToolPage.principles": "PRINCIPIOS",
   "app.containers.ToolPage.realWorldExamplesOf": "EJEMPLOS DEL MUNDO REAL SOBRE {title}",
   "app.containers.ToolPage.relatedTools": "MÓDULOS RELACIONADOS",
   "app.containers.ToolPage.removeTool": "ELIMINAR ESTE MÓDULO DE TUS HERRAMIENTAS",
+  "app.containers.ToolPage.share": "",
   "app.containers.ToolPage.showLess": "LEER MENOS",
   "app.containers.ToolPage.showMore": "LEER MÁS",
   "app.containers.ToolPage.stories": "Historias",
+  "app.containers.ToolPage.story": "Historia",
+  "app.containers.ToolPage.tactic": "TÁCTICA",
   "app.containers.ToolPage.tactics": "TÁCTICAS",
   "app.containers.ToolPage.tags": "Etiquetas",
   "app.containers.ToolPage.theories": "TEORÍAS",
+  "app.containers.ToolPage.theory": "TEORÍA",
   "app.containers.Tools.header": "This is Tools container !",
   "app.containers.Tools.myTools": "MIS HERRA-MIENTAS",
   "app.containers.Tools.newsFeed": "CANAL DE NOTICIAS",
+  "app.containers.Tools.pdfSpiel": "",
   "app.containers.Tools.remove": "Eliminar",
   "app.containers.Tools.share": "compartir",
   "app.containers.ToolsSortOptions.alphabeticalButton": "Alfabético",
