--- a/app/translations/fr.json
+++ b/app/translations/fr.json
@@ -67,6 +67,7 @@
   "app.components.PlatformsPageComponents.what": "",
   "app.components.RegionOptions.header": "",
   "app.components.SelectedToolComponents.header": "",
+  "app.components.ShareButton.header": "",
   "app.components.ToolHowToUse.header": "",
   "app.components.ToolKeyItems.header": "",
   "app.components.ToolKeyItems.keyMethodology": "",
@@ -98,6 +99,7 @@
   "app.components.ToolTypeArea.theoriesLong": "",
   "app.components.ToolTypeSelectedFull.header": "",
   "app.components.ToolTypeSelectedPartial.header": "",
+  "app.components.ToolWhyItFailed.header": "",
   "app.components.ToolsComponents.header": "",
   "app.components.ToolsPotentialRisk.potentialRiskHeader": "",
   "app.components.ToolsRequestTraining.requestTraining": "",
@@ -109,6 +111,11 @@
   "app.components.TypeMenu.stories": "",
   "app.containers.AboutPage.description": "",
   "app.containers.AboutPage.header": "",
+  "app.containers.AskTheContributor.emailPlaceholder": "",
+  "app.containers.AskTheContributor.header": "",
+  "app.containers.AskTheContributor.questionPlaceholder": "",
+  "app.containers.AskTheContributor.subheader": "",
+  "app.containers.AskTheContributor.submit": "",
   "app.containers.ContactUs.complete": "",
   "app.containers.ContactUs.header": "",
   "app.containers.ContactUs.submit": "",
@@ -120,6 +127,8 @@
   "app.containers.EmailTools.header": "",
   "app.containers.EmailTools.instruction": "",
   "app.containers.EmailTools.submit": "",
+  "app.containers.EmptyToolsMessage.header": "",
+  "app.containers.EmptyToolsMessage.instruction": "",
   "app.containers.HomePage.clearSearch": "",
   "app.containers.HomePage.header": "",
   "app.containers.HomePage.methodology": "",
@@ -131,9 +140,13 @@
   "app.containers.HomePage.tags": "",
   "app.containers.HomePage.theory": "",
   "app.containers.HomePage.viewAs": "",
+  "app.containers.NewsFeed.follow": "",
+  "app.containers.NewsFeed.header": "",
   "app.containers.PlatformsPage.header": "",
   "app.containers.SearchField.header": "",
   "app.containers.SearchField.placeholder": "",
+  "app.containers.SubmitNewsFeed.header": "",
+  "app.containers.SubmitNewsFeed.submit": "",
   "app.containers.SubmitRealWorldExample.description": "",
   "app.containers.SubmitRealWorldExample.header": "",
   "app.containers.SubmitRealWorldExample.instruction": "",
@@ -146,19 +159,26 @@
   "app.containers.ToolPage.header": "",
   "app.containers.ToolPage.learnMore": "",
   "app.containers.ToolPage.methodologies": "",
+  "app.containers.ToolPage.methodology": "",
+  "app.containers.ToolPage.principle": "",
   "app.containers.ToolPage.principles": "",
   "app.containers.ToolPage.realWorldExamplesOf": "",
   "app.containers.ToolPage.relatedTools": "",
   "app.containers.ToolPage.removeTool": "",
+  "app.containers.ToolPage.share": "",
   "app.containers.ToolPage.showLess": "",
   "app.containers.ToolPage.showMore": "",
   "app.containers.ToolPage.stories": "",
+  "app.containers.ToolPage.story": "",
+  "app.containers.ToolPage.tactic": "",
   "app.containers.ToolPage.tactics": "",
   "app.containers.ToolPage.tags": "",
   "app.containers.ToolPage.theories": "",
+  "app.containers.ToolPage.theory": "",
   "app.containers.Tools.header": "",
   "app.containers.Tools.myTools": "",
   "app.containers.Tools.newsFeed": "",
+  "app.containers.Tools.pdfSpiel": "",
   "app.containers.Tools.remove": "",
   "app.containers.Tools.share": "",
   "app.containers.ToolsSortOptions.alphabeticalButton": "",
