Fix translations and links for beautiful rising

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -20,7 +20,7 @@
   "app.components.ContributeMenu.howItWorks": "",
   "app.components.ContributeType.callToAction": "",
   "app.components.ContributeType.header": "",
-  "app.components.Footer.footer": "Beautiful Rising بواسطة Beautiful Rising، و مختلف المؤلفين مرخصٌ لها بموجب Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. قد تكون أي تصاريح خارج نطاق هذا الترخيص متاحةً على beautifulrising.org. إن الوثائق حول واجهة برمجة التطبيقات (API) و التي تدعّم Beautiful Rising يمكن أن [تجدها على GitHub](https://github.com/BeautifulTrouble/api-docs#api-docs).",
+  "app.components.Footer.footer": "Beautiful Rising بواسطة Beautiful Rising، و مختلف المؤلفين مرخصٌ لها بموجب Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. قد تكون أي تصاريح خارج نطاق هذا الترخيص متاحةً على [beautifulrising.org](//beautifulrising.org). إن الوثائق حول واجهة برمجة التطبيقات (API) و التي تدعّم Beautiful Rising يمكن أن [تجدها على GitHub](https://github.com/BeautifulTrouble/api-docs#api-docs).",
   "app.components.Header.aboutLink": "",
   "app.components.Header.header": "",
   "app.components.Header.homeLink": "",
