--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -20,7 +20,7 @@
   "app.components.ContributeMenu.howItWorks": "How does it work?",
   "app.components.ContributeType.callToAction": "[GO TO FORM](https://docs.google.com/forms/d/e/1FAIpQLSeC_EdxoO7owVnL8fjSERZlychwMhDOR-7rI1SDtpL4ijZgkg/viewform)",
   "app.components.ContributeType.header": "This is the ContributeType component !",
-  "app.components.Footer.footer": "Beautiful Rising by Beautiful Rising, various authors is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. Permissions beyond the scope of this license may be available at beautifulrising.org. Documentation for the application programming interface (API) that powers Beautiful Rising can be [found on GitHub](https://github.com/BeautifulTrouble/api-docs#api-documentation-for-the-various-beautiful-projects).",
+  "app.components.Footer.footer": "Beautiful Rising by Beautiful Rising, various authors is licensed under a Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. Permissions beyond the scope of this license may be available at [beautifulrising.org](//beautifulrising.org). Documentation for the application programming interface (API) that powers Beautiful Rising can be [found on GitHub](https://github.com/BeautifulTrouble/api-docs#api-documentation-for-the-various-beautiful-projects).",
   "app.components.Header.aboutLink": "About",
   "app.components.Header.header": "BeautifulRising",
   "app.components.Header.homeLink": "Home",
