fix scrolling on menu popup and arabic alignments

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -128,7 +128,7 @@
   "app.containers.EmailTools.instruction": "",
   "app.containers.EmailTools.submit": "رفع",
   "app.containers.EmptyToolsMessage.header": "",
-  "app.containers.EmptyToolsMessage.instruction": "",
+  "app.containers.EmptyToolsMessage.instruction": "انقر على \"{icon}\" لحفظ أدواتك المفضلة هنا. (ليس هناك حاجة لتسجيل الدخول؛ ستكون قائمتك هنا في المرة القادمة التي تقوم فيها بالزيارة من نفس الجهاز.)",
   "app.containers.HomePage.clearSearch": "مسح",
   "app.containers.HomePage.header": "",
   "app.containers.HomePage.methodology": "منهجية",
@@ -140,13 +140,13 @@
   "app.containers.HomePage.tags": "شعارات",
   "app.containers.HomePage.theory": "نظرية",
   "app.containers.HomePage.viewAs": "عرض كـ",
-  "app.containers.NewsFeed.follow": "",
-  "app.containers.NewsFeed.header": "",
+  "app.containers.NewsFeed.follow": "متابعة",
+  "app.containers.NewsFeed.header":  "إننا نقدم هاشتاجات إخبارية متنوعة مرتبطة بحملات و تحركات مختلفة حول العالم لإبقائك على تواصل مع ما يحدث.",
   "app.containers.PlatformsPage.header": "",
   "app.containers.SearchField.header": "",
   "app.containers.SearchField.placeholder": "البحث عن الكلمات الرئيسية، مثلا: التشريع، قمع الدولة، إلخ.",
-  "app.containers.SubmitNewsFeed.header": "",
-  "app.containers.SubmitNewsFeed.submit": "",
+  "app.containers.SubmitNewsFeed.header": "هل يوجد هاشتاج يجب أن نكون على علم به؟ دعنا نعلم.",
+  "app.containers.SubmitNewsFeed.submit":  "رفع",
   "app.containers.SubmitRealWorldExample.description": "",
   "app.containers.SubmitRealWorldExample.header": "هل رأيت أو استخدمت هذا",
   "app.containers.SubmitRealWorldExample.instruction": "",
